--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
  - "3.5"
-script: make
+script: 
+ - make
+ - coverage run -m unittest discover
 after_success:
  - coveralls
