--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
  - "3.5"
 install:
  - pip install coveralls
+ - pip install colorama
 script: 
  - make
  - coverage run -m unittest discover
